[package]
name = "native-level-catalog"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "native-level-catalog"
path = "tools/catalog/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
quick-xml = "0.37"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
